--- a/index.html
+++ b/index.html
@@ -3,78 +3,169 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Actividad obligatoria 2</title>
+    <title>Trabajo Integrador 1</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-<nav class="navbar navbar-expand-sm navbar-light" style="color: white">
+<nav class="navbar navbar-expand-xl navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">Codo a Codo</a>
+        <a class="navbar-brand" href="#">
+            <img src="./images/codoacodo.png" width="100" height="60" alt="Codo a Codo">
+            Conf Bs As</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
-            <ul class="navbar-nav me-auto">
+            <ul class="navbar-nav navbar-right ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Inicio</a>
+                    <a class="nav-link active" href="#">La conferencia</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Link</a>
+                    <a class="nav-link" href="#">Los oradores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="javascript:void(0)">Desactivado</a>
+                    <a class="nav-link" href="#">El lugar y la fecha</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Conviértete en orador</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: green" href="#">Comprar tickets</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="text" placeholder="Buscar">
-                <button class="btn btn-outline-success" type="button">Buscar</button>
-            </form>
         </div>
     </div>
 </nav>
-    <div class="card-group">
-        <div class="card">
-            <img class="card-img-top" style="height: 60%" src="images/HTML5.jpg" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Titulo 1</h5>
-                <p class="card-text">Contenido de Card</p>
-                <p class="card-text"><small class="text-muted">Última actualización hace 1 minuto</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" style="height: 60%" src="images/css.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Titulo 2</h5>
-                <p class="card-text">Contenido de Card</p>
-                <p class="card-text"><small class="text-muted">Última actualización hace 1 minuto</small></p>
-            </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" style="height: 60%" src="images/bootstrap.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Titulo 3</h5>
-                <p class="card-text">Contenido de Card</p>
-                <p class="card-text"><small class="text-muted">Última actualización hace 1 minuto</small></p>
+
+<div class="card bg-dark text-white text-end">
+    <img src="./images/ba1.jpg" class="card-img opacity-50" style="background-color: black; height: 40rem; object-fit: cover;" alt="Buenos Aires">
+    <div class="card-img-overlay">
+        <div class="row h-100 justify-content-end align-items-center">
+            <div class="col-6">
+                <h1 class="card-title">Conf Bs As</h1>
+                <p class="card-text">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
+                <a href="#" class="btn text-white border-white bg-transparent">Quiero ser orador</a>
+                <a href="#" class="btn text-white" style="background-color: #27a844;">Comprar tickets</a>
             </div>
         </div>
     </div>
-<form action="/action_page.php">
-    <div class="mb-3 mt-3">
-        <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email">
+</div>
+
+<p style="text-align: center; margin-top: 10px;">Conoce a los</p>
+<h2 style="text-align: center;">ORADORES</h2>
+<div class="card-group">
+    <div class="card">
+        <img class="card-img-top" style="height: 60%" src="./images/steve.jpg" alt="Steve Jobs">
+        <div class="card-body">
+            <span class="badge bg-warning text-dark">Javascript</span> <span class="badge bg-info">React</span>
+            <h5 class="card-title">Steve Jobs</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aliquam assumenda at autem corporis, eveniet id, magnam neque nihil nobis placeat repellendus repudiandae saepe sequi sint temporibus ullam, voluptates voluptatibus.</p>
+        </div>
     </div>
-    <p class="text-muted">Nunca comparta su email.</p>
-    <div class="mb-3">
-        <label for="pwd" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="pwd" name="pswd">
+    <div class="card">
+        <img class="card-img-top" style="height: 60%" src="./images/bill.jpeg" alt="Bill Gates">
+        <div class="card-body">
+            <span class="badge bg-warning text-dark">Javascript</span> <span class="badge bg-info">React</span>
+            <h5 class="card-title">Bill Gates</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti doloremque, earum, est fuga hic illum ipsa iure iusto labore laudantium maxime odio, odit praesentium quidem reiciendis reprehenderit sint vel voluptatem.</p>
+        </div>
     </div>
-    <div class="form-check mb-3">
-        <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" name="remember"> Verificar
-        </label>
+    <div class="card">
+        <img class="card-img-top" style="height: 60%" src="./images/ada.jpeg" alt="Ada Lovelace">
+        <div class="card-body">
+            <span class="badge bg-secondary">Negocios</span> <span class="badge bg-danger">Startups</span>
+            <h5 class="card-title">Ada Lovelace</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cumque dignissimos ex inventore, nesciunt qui quos voluptate. Asperiores debitis doloremque expedita fuga fugiat, hic illum inventore nostrum quae repellendus temporibus.</p>
+        </div>
     </div>
-    <button type="submit" class="btn btn-primary">Enviar</button>
+</div>
+
+<div class="card mb-4 text-white" style="max-width: 100%">
+    <div class="row g-0">
+        <div class="col-md-6">
+            <img src="./images/honolulu.jpg" class="img-fluid rounded-start" alt="Honolulu">
+        </div>
+        <div class="col-md-6" style="background-color: #34343D;">
+            <div class="card-body">
+                <h4 class="card-title">Bs As - Octubre</h4>
+                <p class="card-text" style="font-size: 12.5px;">Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad (aproximadamente 600 km2 de superficie).</p>
+                <a href="#" class="btn text-white border-white bg-transparent">Conocé más</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<form class="form">
+    <p>CONVIÉRTETE EN UN</p>
+    <h2 class="form_title">ORADOR</h2>
+    <p style="margin-bottom: 1rem;" class="form_paragraph">Anótate como orador para dar una <span style="text-decoration: underline; text-decoration-style: dotted;">charla ignite</span>. Cuéntanos de qué quieres hablar!</p>
+
+    <div class="form_container">
+        <div class="form_group">
+            <form>
+                <div class="row">
+                    <div class="col">
+                        <input style="width: 16rem; margin-left: 25rem" type="text" class="form-control" placeholder="Nombre" name="name">
+                    </div>
+                    <div class="col">
+                        <input style="width: 16rem; margin-right: 5rem;" type="text" class="form-control" placeholder="Apellido" name="lastname">
+                    </div>
+                </div>
+            </form>
+            <textarea style="width: 34rem; height: 6rem; margin-left: 25rem; margin-top: 1rem;" class="form-control" rows="5" id="comment" name="text" placeholder="Sobre qué quieres hablar?"></textarea>
+            <label style="color: grey; margin-top: 0.5rem; margin-left: -16.5rem;" for="comment" class="form_label">Recuerda incluir un título para tu charla</label>
+        </div>
+        <button style="margin-top: 1.5rem; width: 34.5rem; background-color: #87c940; border-color: #87c940" class="btn btn-success" type="submit">Enviar</button>
+    </div>
+
 </form>
+
+<footer class="text-center text-white" style="background-color: #154360; height: 7rem">
+    <section class="mt-5">
+        <div class="row d-flex justify-content-center pt-5">
+            <div class="col-md-1">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none; line-height: 1.4rem;" href="#!" class="text-white">Preguntas frecuentes</a>
+                </h6>
+            </div>
+
+            <div class="col-md-2">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none;" href="#!" class="text-white">Contáctanos</a>
+                </h6>
+            </div>
+
+            <div class="col-md-1">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none;" href="#!" class="text-white">Prensa</a>
+                </h6>
+            </div>
+
+            <div class="col-md-2">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none;" href="#!" class="text-white">Conferencias</a>
+                </h6>
+            </div>
+
+            <div class="col-md-1">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none; line-height: 1.4rem;" href="#!" class="text-white">Términos y condiciones</a>
+                </h6>
+            </div>
+
+            <div class="col-md-2">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none;" href="#!" class="text-white">Privacidad</a>
+                </h6>
+            </div>
+
+            <div class="col-md-1">
+                <h6 class="font-weight-bold">
+                    <a style="text-decoration: none;" href="#!" class="text-white">Estudiantes</a>
+                </h6>
+            </div>
+        </div>
+    </section>
+</footer>
 </body>
 </html>
