add reference to TpIntegrador2

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Conviértete en orador</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: green" href="#">Comprar tickets</a>
+                    <a class="nav-link" style="color: green" href="https://franklizcano.github.io/TpIntegrador2/">Comprar tickets</a>
                 </li>
             </ul>
         </div>
@@ -45,7 +45,7 @@
                 <h1 class="card-title">Conf Bs As</h1>
                 <p class="card-text">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                 <a href="#" class="btn text-white border-white bg-transparent">Quiero ser orador</a>
-                <a href="#" class="btn text-white" style="background-color: #27a844;">Comprar tickets</a>
+                <a href="https://franklizcano.github.io/TpIntegrador2/" class="btn text-white" style="background-color: #27a844;">Comprar tickets</a>
             </div>
         </div>
     </div>
